Wed Jul 09 14:49:35 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* libs/get_xapian.py: And another upload, this time to fix
	  autoreconf.

Wed Jul 09 14:14:28 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* libs/get_xapian.py: And another set of updated packages!

Wed Jul 09 11:55:40 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* libs/get_xapian.py: New version to fix segfault.

Wed Jul 09 08:23:21 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* libs/get_xapian.py: Updated packages.

Fri Jul 04 17:10:46 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* libs/get_xapian.py,utils/make_xappy_tarballs: Point to updated
	  tarballs, which fix an assertion failure in some situations, and
	  update version numbers in tarball generation script accordingly.

Wed Jul 02 11:53:48 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Fix for issue #21:
	  "SearchConnection._get_prefix_from_term fails when terms contain
	  numbers", as supplied by Shane Evans.

Wed Jul 02 11:53:07 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/unittests/facet_hierarchy_1.py: Add regression test for
	  issue #21: "SearchConnection._get_prefix_from_term fails when
	  terms contain numbers".

Wed Jul 02 11:00:09 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* setup.py,test.py,xappy/test.py: Move test.py to top level, for
	  easier running.

Thu Jun 26 12:18:02 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* docs/queries.rst: Further documentation on how to use queries.

Thu Jun 26 10:44:09 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/query.py: Add Query.empty(), with the same semantics as
	  xapian.Query.empty().

Thu Jun 26 06:38:13 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* docs/queries.rst: Add new document describing how to use Query
	  objects.  Some FIXMEs in sections which are still to be written.