@@ -40,21 +40,21 @@ import urllib2
 #  - SHA1 sum of package
 archives = (
     ('Xapian core',
-     'http://xappy.googlecode.com/files/xapian-core-10854.tgz',
+     'http://xappy.googlecode.com/files/xapian-core-10855.tgz',
      'xapian-core.tgz',
-     'cc14120800cba1d483264df97aef4075fb801211',
+     'c1b29ad3e815f477b1887066d61120efeb3d664e',
      '',
     ),
     ('Xapian bindings',
-     'http://xappy.googlecode.com/files/xapian-bindings-10854.tgz',
+     'http://xappy.googlecode.com/files/xapian-bindings-10855.tgz',
      'xapian-bindings.tgz',
-     'cba5fc4a08a0a044951ccc9c50357b433c984dc9',
+     '63b28828276301ce5ee145c3972c5a64d802c86a',
      '',
     ),
     ('Xapian win32 build system',
-     'http://xappy.googlecode.com/files/win32msvc-10854.tgz',
+     'http://xappy.googlecode.com/files/win32msvc-10855.tgz',
      'win32msvc.tgz',
-     'c4ab63ff63e458ee896faf6f1ce88edf9c4c0b44',
+     '9b95184fa86876d71e740548b5eb8682628aa1eb',
      'xapian-core/win32',
     ),
 )
